--- a/Quiz/src/main/res/anim/move.xml
+++ b/Quiz/src/main/res/anim/move.xml
@@ -5,7 +5,7 @@
     android:fillAfter="true">
 
     <translate
-        android:fromXDelta="75%p"
-        android:toXDelta="0%p"
+        android:fromYDelta="0"
+        android:toYDelta="0%p"
         android:duration="400" />
 </set>
