--- a/Quiz/src/main/res/layout/activity_main.xml
+++ b/Quiz/src/main/res/layout/activity_main.xml
@@ -8,33 +8,15 @@
     android:background="@drawable/dyno"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/play_again"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/roar"
-        android:onClick="playSound"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+    <LinearLayout
+        android:id="@+id/LinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clickable="true"
+        android:focusable="true"
+        android:gravity="bottom"
+        android:onClick="playSoundToPick"
+        android:orientation="vertical">
 
-     <com.nex3z.flowlayout.FlowLayout
-        android:id="@+id/Button_layout"
-        android:layout_width="368dp"
-        android:layout_height="551dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:gravity="bottom|center_horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </com.nex3z.flowlayout.FlowLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
