--- a/app/src/main/res/anim/move.xml
+++ b/app/src/main/res/anim/move.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:interpolator="@android:anim/linear_interpolator"
-    android:fillAfter="true">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fillAfter="true"
+    android:interpolator="@android:anim/linear_interpolator">
 
     <translate
+        android:duration="400"
         android:fromXDelta="75%p"
-        android:toXDelta="0%p"
-        android:duration="400" />
+        android:toXDelta="0%p" />
 </set>
