--- a/app/src/main/res/anim/rotate.xml
+++ b/app/src/main/res/anim/rotate.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <rotate android:fromDegrees="0"
-        android:toDegrees="360"
+    <rotate
+        android:duration="300"
+        android:fromDegrees="0"
+        android:interpolator="@android:anim/cycle_interpolator"
         android:pivotX="50%"
         android:pivotY="50%"
-        android:duration="300"
-        android:repeatMode="restart"
         android:repeatCount="0"
-        android:interpolator="@android:anim/cycle_interpolator"/>
+        android:repeatMode="restart"
+        android:toDegrees="360" />
 
 </set>
